# Cybersecrity-Threat-Detect-and-Log-Analyser-System

./: .gitignore  CMakeLists.txt  README.md
data/: large_logs.csv  sample_logs.csv
docs/: Final_Report.docx  ThreatAnalyzer_Setup_Guide.docx  architecture.md  generate_final_report.js
include/analytics/: Analytics.hpp
include/analyzer/: AccessDeniedDetector.hpp  AlertManager.hpp  BruteForceDetector.hpp  ErrorSpikeDetector.hpp  ReportGenerator.hpp  SuspiciousIPDetector.hpp  ThreatAnalyzer.hpp  ThreatScorer.hpp
include/exceptions/: Exceptions.hpp
include/indexer/: LogIndexer.hpp
include/loader/: CSVLoader.hpp
include/models/: Alert.hpp  LogEntry.hpp  Threat.hpp
include/search/: SearchEngine.hpp
include/utils/: Logger.hpp
src/: main.cpp
src/analytics/: Analytics.cpp
src/analyzer/: AccessDeniedDetector.cpp  AlertManager.cpp  BruteForceDetector.cpp  ErrorSpikeDetector.cpp  ReportGenerator.cpp  SuspiciousIPDetector.cpp  ThreatAnalyzer.cpp  ThreatScorer.cpp
src/indexer/: LogIndexer.cpp
src/loader/: CSVLoader.cpp
src/models/: Alert.cpp  LogEntry.cpp  Threat.cpp
src/search/: SearchEngine.cpp
src/utils/: Logger.cpp
tests/: test_access_denied_detector.cpp  test_alert_manager.cpp  test_analytics.cpp  test_brute_force_detector.cpp  test_csv_loader.cpp  test_error_spike_detector.cpp  test_log_indexer.cpp  test_search_engine.cpp  test_suspicious_ip_detector.cpp  test_threat_scorer.cpp
